--- a/qt/WeChat/messagewidget.ui
+++ b/qt/WeChat/messagewidget.ui
@@ -305,30 +305,32 @@ background-color: rgb(218, 218, 218);
         <property name="font">
          <font>
           <family>等线</family>
-          <pointsize>10</pointsize>
+          <pointsize>11</pointsize>
          </font>
         </property>
         <property name="styleSheet">
          <string notr="true">#receviceTE {
-         background-color: white; 
-        border-radius: 5px;
-         padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
-           border: none
+background-color: white; 
+border-radius: 5px;
+border: none;
+padding:10px;
 }
 
 #receviceTE:hover {
-         
-	background-color: rgb(218, 218, 218);
-        border-radius: 5px;
-         padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
-           border: none
+background-color: rgb(218, 218, 218);
+border-radius: 5px;
+border: none;
 }</string>
+        </property>
+        <property name="html">
+         <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;meta charset=&quot;utf-8&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+hr { height: 1px; border-width: 0; }
+li.unchecked::marker { content: &quot;\2610&quot;; }
+li.checked::marker { content: &quot;\2612&quot;; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'等线'; font-size:11pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p align=&quot;justify&quot; style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
        </widget>
       </item>
@@ -368,18 +370,19 @@ background-color: rgb(218, 218, 218);
         <property name="font">
          <font>
           <family>等线</family>
-          <pointsize>10</pointsize>
+          <pointsize>11</pointsize>
          </font>
         </property>
         <property name="styleSheet">
          <string notr="true">#sendTE {
-         background-color: #95EC69; 
-        border-radius: 5px;
-        padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
-           border: none
+ background-color: #95EC69; 
+border-radius: 5px;
+ padding-top: 10px;
+ padding-bottom: 10px;
+padding-left: 10px;
+padding-right: 10px;
+line-height: 3;
+border: none；
 }
 
 #sendTE:hover {
@@ -390,7 +393,7 @@ background-color: rgb(218, 218, 218);
   padding-bottom: 10px;
   padding-left: 10px;
   padding-right: 10px;
-           border: none
+           border: none；
 }</string>
         </property>
         <property name="html">
@@ -400,7 +403,7 @@ p, li { white-space: pre-wrap; }
 hr { height: 1px; border-width: 0; }
 li.unchecked::marker { content: &quot;\2610&quot;; }
 li.checked::marker { content: &quot;\2612&quot;; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'等线'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'等线'; font-size:11pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Microsoft YaHei UI'; font-size:9pt;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
        </widget>
